input: sensors: sensor class support for lsm303 accel
Add sensor class and regulator support for lsm303 accel
sensor. Fix checkpatch errors.

Change-Id: Iec30dcc6905d0e0e64733e443722c155cc370d75
Signed-off-by: Kiran Raparthy <krapar@codeaurora.org>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -688,4 +688,11 @@ config LSM330_GYRO
           If you say yes here you get support for STMicroelectronics's
           gyroscope sensors LSM330.
 
+config LSM303_ACC
+        tristate "STM LSM303 acceleration sensor support"
+        depends on I2C=y
+        help
+          If you say yes here you get support for STMicroelectronics's
+          acceleration sensors LSM303.
+
 endif
