--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -215,6 +215,7 @@ config SND_SOC_MSM8226
 	select SND_SOC_MSM_STUB
 	select SND_SOC_MSM_HOSTLESS_PCM
 	select SND_SOC_WCD9306
+	select SND_SOC_WCD9330
 	select SND_DYNAMIC_MINORS
 	select DOLBY_DAP
 	help
