--- a/sound/soc/msm/Makefile
+++ b/sound/soc/msm/Makefile
@@ -93,7 +93,7 @@ snd-soc-mdm9625-objs := mdm9625.o
 obj-$(CONFIG_SND_SOC_MDM9625) += snd-soc-mdm9625.o
 
 #for MSM 8226 sound card driver
-snd-soc-msm8226-objs := msm8226.o
+snd-soc-msm8226-objs := msm8226.o msm8226-wear.o
 obj-$(CONFIG_SND_SOC_MSM8226) += snd-soc-msm8226.o
 
 # for MSM 8x10 sound card driver
