msm: pcie: add support for switch latency
Add support for switch latency property to add
additional delay if switch is present.

Change-Id: I35e160cb2b38bd191facb92e17057d50e902c140
Signed-off-by: Ajith Jose <ajitht@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdm9640.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9640.dtsi
@@ -586,7 +586,7 @@
 		qcom,pcie-phy-ver = <0x90>;
 
 		qcom,ep-latency = <10>;
-
+		qcom,switch-latency = <100>;
 		qcom,msm-bus,name = "pcie0";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
