ARM: dts: msm: Add Modem GLINK QOS 9x50
Add QOS entry to MPSS edge so TX thread is promoted to SCHED_FIFO
priority.

Change-Id: I52455c24b9aec9635f10b5f01d4df56d6377c903
Signed-off-by: Chris Lew <clew@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/mdm9650.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9650.dtsi
@@ -852,6 +852,18 @@
 		qcom,irq-mask = <0x8000>;
 		interrupts = <0 28 1>;
 		label = "mpss";
+		qcom,qos-config = <&glink_qos_modem>;
+		qcom,ramp-time = <0xaf>;
+	};
+
+	glink_qos_modem: qcom,glink-qos-config-modem {
+		compatible = "qcom,glink-qos-config";
+		qcom,flow-info = <0x3c 0x0>,
+				<0x3c 0x0>,
+				<0x3c 0x0>,
+				<0x3c 0x0>;
+		qcom,mtu-size = <0x800>;
+		qcom,tput-stats-cycle = <0xa>;
 	};
 
 	qcom,glink-smem-native-xprt-rpm@60000 {
